{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 68,
  "lineage": "7dda0575-fb7e-c377-ee69-6350a9b4eb22",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423263281:internet-gateway/igw-0e52d8d43ced4d8b6",
            "id": "igw-0e52d8d43ced4d8b6",
            "owner_id": "637423263281",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0682765f01b922a55"
          },
          "dependencies": [
            "aws_vpc.live-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423263281:route-table/rtb-0d5600a4dfedf3324",
            "id": "rtb-0d5600a4dfedf3324",
            "owner_id": "637423263281",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e52d8d43ced4d8b6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-1"
            },
            "tags_all": {
              "Name": "route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0682765f01b922a55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateways",
            "aws_vpc.live-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alpha",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086455849b45c16bc",
            "route_table_id": "rtb-0d5600a4dfedf3324",
            "subnet_id": "subnet-0086bec20766772f1"
          },
          "dependencies": [
            "aws_internet_gateway.gateways",
            "aws_route_table.route1",
            "aws_subnet.live-subnet",
            "aws_vpc.live-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423263281:security-group/sg-06a751c4886bb32fc",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a751c4886bb32fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Project2",
            "name_prefix": "",
            "owner_id": "637423263281",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Project2"
            },
            "tags_all": {
              "Name": "Project2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0682765f01b922a55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.live-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "live-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423263281:subnet/subnet-0086bec20766772f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0086bec20766772f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423263281",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "live-subnet"
            },
            "tags_all": {
              "Name": "live-subnet"
            },
            "vpc_id": "vpc-0682765f01b922a55"
          },
          "dependencies": [
            "aws_vpc.live-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "live-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423263281:vpc/vpc-0682765f01b922a55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eab2ba2ccd0c16b7",
            "default_route_table_id": "rtb-03580d2ac50e8f76a",
            "default_security_group_id": "sg-08c5b54e5d6fb8f67",
            "dhcp_options_id": "dopt-05bb84c2a885a8ff2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0682765f01b922a55",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03580d2ac50e8f76a",
            "owner_id": "637423263281",
            "tags": {
              "Name": "live-vpc"
            },
            "tags_all": {
              "Name": "live-vpc"
            }
          }
        }
      ]
    }
  ]
}